Mon Mar 15 16:03:34 1999  Tom Yu  <tlyu@mit.edu>

	* profile.hin: Fix GSS_DLLIMP.

Mon Mar  8 19:10:06 1999  Tom Yu  <tlyu@mit.edu>

	* profile.hin: Fix prototype of profile_flush() to use long rather
	than errcode_t to avoid breaking other stuff that includes
	profile.h.

Mon Mar  8 14:38:24 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* prof_tree.c (profile_node_iterator): Fix bug where it will loop
		endlessly when searching an empty section.

	* test_profile.c: Add code so that the "add" code will interpret
		"NULL" as calling profile_add_relation with a null pointer
		for the value.

Wed Mar  3 18:23:47 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* prof_file.c (profile_flush_file): On the Macintosh, fopen()
		doesn't set errno when fopen fails to open a file.  Work
		around this by setting errno to PROF_FAIL_OPEN in this case.

	* prof_err.et: Add new error code PROF_FAIL_OPEN.

Tue Mar  2 18:55:50 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* test_profile.c: Added ability to test profile set functions, and
		in a batch mode.
	
	* prof_init.c (profile_flush): Add new public function for
		flushing changes made to the profile.

	* prof_parse.c (profile_write_tree_file): Add official internal
		function for flushing out a profile tree to a FILE *.
	
	* configure.in, prof_file.c (rw_access): Add new function which
		checks to see whether we have read/write access, and
		emulate this for losing non-POSIX OS's.

	* prof_file.c (profile_flush_file): Add support for writing
 	 	modified profile file's.  Call profile_flush_file from
 	 	profile_close_file().

	* prof_tree.c: Add new functions profile_get_node_name,
 		profile_get_node_value, profile_find_node,
 		profile_remove_node, profile_set_relation_value,
 		profile_rename_node.  Rewrite profile_find_node_relation
 		and profile_find_node_subsection in terms of
 		profile_find_node.
	
	* prof_set.c, Makefile.in: Add a new file which exports the public
		interfaces for setting profile entries.
